1999-08-28  Tom Tromey  <tromey@cygnus.com>

	* gnome-metadata.c (database_mu): Now an ordinary static mutex.
	(TLOCK): Removed.
	(TUNLOCK): Likewise.
	(lock): Removed `thread' argument.
	(unlock): Likewise.
	(Various): All mutex locking now done around body of exported
	functions.

Sat Aug 28 10:33:28 1999  George Lebl  <jirka@5z.com>

	* gnome-dentry.c: fix warnings

1999-08-28  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-metadata.c: Temporarily #define `TUNLOCK()' and `TLOCK()'
	to no-ops even if gthreads are available, to let gnome-libs
	compile with GLib 1.2 again.

1999-08-27  Tom Tromey  <tromey@cygnus.com>

	* gnome-metadata.c (database_mu): New global.
	(init): Lock and unlock mutex.
	(lock): Likewise.  Added `thread' argument.  Updated all callers.
	(unlock): Likewise.
	(TLOCK): New macro.
	(TUNLOCK): Likewise.
	(try_app_regexs): Likewise.
	(app_get_by_type): Likewise.
	(try_regexs): Likewise.  Also, increment `p' inside the loop.
	(run_file): Enable code.

Fri Aug 27 15:40:57 1999  George Lebl  <jirka@5z.com>

	* gnome-dentry.[ch]: add functions for getting the i18n lists,
	  and implement it using g_dataset instead of hash_table

	* gnome-dentry.c: don't just concatenate the argument list when
	  launching with argument list, but add quotes around each
	  argument, and escape quotes inside arguments, and then
	  concatenate with spaces

Fri Aug 27 10:29:27 1999  George Lebl  <jirka@5z.com>

	* gnome-dentry.[ch]: added a structure for translations of
	  name and comment field and store them in a list that is
	  in a hashed keyed to the dentry pointer.

Thu Aug 26 20:48:13 1999  George Lebl  <jirka@5z.com>

	* parse-path.cP: append current dir to relative filenames to fix
	  bug #1968

1999-08-26  Federico Mena Quintero  <federico@redhat.com>

	* gnome-mime.c (add_to_key): Bertrand Guiheneuf
	<Bertrand.Guiheneuf@inria.fr> showed me how big a doofus I am.
	Duplicate the key as well when we need to store a regex-based
	definition.
